# ChangeLog for dev-ruby/sqlite3-ruby
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3-ruby/Attic/ChangeLog,v 1.63 2012/02/06 19:43:07 ranger Exp $

  06 Feb 2012; Brent Baude <ranger@gentoo.org> sqlite3-ruby-1.3.3.ebuild:
  Marking sqlite3-ruby-1.3.3 ppc for bug 397979

*sqlite3-ruby-1.3.4-r1 (16 Jan 2012)

  16 Jan 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  +sqlite3-ruby-1.3.4-r1.ebuild:
  Create alias specification for old name (sqlite3-ruby).

  15 Jan 2012; Raúl Porcel <armin76@gentoo.org> sqlite3-ruby-1.3.3.ebuild:
  ia64/sparc/x86 stable wrt #397979

  07 Jan 2012; Agostino Sarubbo <ago@gentoo.org> sqlite3-ruby-1.3.3.ebuild:
  Stable for AMD64, wrt bug #397979

  07 Jan 2012; Hans de Graaff <graaff@gentoo.org> sqlite3-ruby-1.3.3.ebuild:
  Drop ruby19 to create a stable candidate.

  07 Jan 2012; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  Drop unused swig USE flag.

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> sqlite3-ruby-1.3.4.ebuild:
  Add Prefix keywords, bug #396547

  26 Dec 2011; Hans de Graaff <graaff@gentoo.org> -sqlite3-ruby-1.2.4.ebuild:
  Remove old version.

*sqlite3-ruby-1.3.4 (05 Dec 2011)

  05 Dec 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  +sqlite3-ruby-1.3.4.ebuild:
  Version bump.

  03 Oct 2011; Jeroen Roovers <jer@gentoo.org> sqlite3-ruby-1.3.2.ebuild:
  Stable for HPPA (bug #385149).

  19 Sep 2011; Hans de Graaff <graaff@gentoo.org> sqlite3-ruby-1.3.3.ebuild:
  Add ruby19 based on testing by Shunsuke Shimizu in bug 358809.

  22 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  sqlite3-ruby-1.3.2.ebuild:
  ppc64 stable wrt #358347

  23 Apr 2011; Raúl Porcel <armin76@gentoo.org> sqlite3-ruby-1.3.2.ebuild:
  ia64/sparc stable wrt #358347

  13 Apr 2011; Markus Meier <maekke@gentoo.org> sqlite3-ruby-1.3.2.ebuild:
  x86 stable, bug #358347

  01 Apr 2011; Michael Weber <xmw@gentoo.org> sqlite3-ruby-1.3.2.ebuild:
  ppc stable (bug 302981)
