@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/sqlite3-ruby
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3-ruby/Attic/ChangeLog,v 1.63 2012/02/06 19:43:07 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3-ruby/Attic/ChangeLog,v 1.64 2012/04/04 13:22:37 graaff Exp $
+
+*sqlite3-ruby-1.3.5 (04 Apr 2012)
+
+  04 Apr 2012; Hans de Graaff <graaff@gentoo.org> +sqlite3-ruby-1.3.5.ebuild:
+  Version bump.
 
   06 Feb 2012; Brent Baude <ranger@gentoo.org> sqlite3-ruby-1.3.3.ebuild:
   Marking sqlite3-ruby-1.3.3 ppc for bug 397979
